--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 										<header>
 											<h3>The dataset hub</h3>
 										</header>
-										<p><a href="kaggle.com">Kaggle </a> 
+										<p><a href="https://www.kaggle.com/">Kaggle </a> 
 										is an online source where you can find datasets and add information to it.</p>
 									</section>
 
@@ -100,6 +100,17 @@
 										</header>
 										<p><a href="https://www.linkedin.com/">LinkedIn </a> 
 										is an networking site to meet various people from the world and different fields.</p>
+									</section>
+
+								<!-- Feature -->
+									<section>
+										<<a href="#" class="image featured"><img src="images/p5.png" alt="" /></a>
+										<header>
+											<h3>ASSIGNNMENT #2
+										</header>
+										<p><a href="https://vizhub.com/isingh4/b884939070024927a54a0da4c7b96ff7?edit=files"> Dot Plot </a> 
+										<p><a href="https://vizhub.com/isingh4/2b5b9ae8db6b460dba238791fc054823"> Bar Chart </a> 
+										</p>
 									</section>
 
 							</div>
