--- a/index.html
+++ b/index.html
@@ -106,11 +106,16 @@
 									<section>
 										<<a href="#" class="image featured"><img src="images/p5.png" alt="" /></a>
 										<header>
-											<h3>ASSIGNNMENT #2
+											<h3>ASSIGNMENT #2
 										</header>
 										<p><a href="https://vizhub.com/isingh4/b884939070024927a54a0da4c7b96ff7?edit=files"> Dot Plot </a> 
 										<p><a href="https://vizhub.com/isingh4/2b5b9ae8db6b460dba238791fc054823"> Bar Chart </a> 
 										</p>
+										<header>
+											<h3>ASSIGNMENT #3
+										</header>
+										<p><a href="https://vizhub.com/isingh4/708c6713e12a43c7a837236bd8c0abbe?edit=files&file=sketch.js"> A3: Histogram </a> 
+
 									</section>
 
 							</div>
