--- a/index.html
+++ b/index.html
@@ -118,6 +118,19 @@
 
 									</section>
 
+
+									<section>
+										<<a href="#" class="image featured"><img src="images/d3.png" alt="" /></a>
+										<header>
+											<h3>ASSIGNMENT #4
+										</header>
+										<p><a href="https://vizhub.com/isingh4/5cb441c2790c43c7b063e2f599635f0e?edit=files&file=index.html"> Bar Graph </a> 
+										<p><a href="https://vizhub.com/isingh4/c98e4a4e12f944b89c078e378708c840?file=index.html#L38"> Scatter Plot </a> 
+										</p>
+										
+
+									</section>
+
 							</div>
 							<div class="col-12">
 								<ul class="actions">
