--- a/index.html
+++ b/index.html
@@ -127,6 +127,12 @@
 										<p><a href="https://vizhub.com/isingh4/5cb441c2790c43c7b063e2f599635f0e?edit=files&file=index.html"> Bar Graph </a> 
 										<p><a href="https://vizhub.com/isingh4/c98e4a4e12f944b89c078e378708c840?file=index.html#L38"> Scatter Plot </a> 
 										</p>
+										<header>
+											<h3>ASSIGNMENT #5
+										</header>
+										<p><a href="https://vizhub.com/isingh4/3811d99b220045fe967fcfce62833f62?edit=files&file=index.html"> Bubble Chart</a> 
+										<p><a href="https://vizhub.com/isingh4/3811d99b220045fe967fcfce62833f62?edit=files&file=index.html"> Line Chart </a> 
+										</p>
 										
 
 									</section>
