--- a/index.html
+++ b/index.html
@@ -133,6 +133,9 @@
 										<p><a href="https://vizhub.com/isingh4/3811d99b220045fe967fcfce62833f62?edit=files&file=index.html"> Bubble Chart</a> 
 										<p><a href="https://vizhub.com/isingh4/3811d99b220045fe967fcfce62833f62?edit=files&file=index.html"> Line Chart </a> 
 										</p>
+
+										<p><a href="https://vizhub.com/isingh4/908779d32d9b4d10b33f20ab23f50a89?edit=files&file=index.html"> Sequential Color Scale </a> 
+										</p>
 										
 
 									</section>
