--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 								<ul>
 									<li><a  href="index.html"><span>Homepage</span></a></li>
 									<li><a  href="index.html"><span> Files</span></a></li>
-									<li><a  href="index.html"><span> Articles</span></a></li>
+									<li><a  href="project.html"><span> Project</span></a></li>
 									<li>
 										
 										<ul>
