--- a/index.html
+++ b/index.html
@@ -136,8 +136,9 @@
 
 										<p><a href="https://vizhub.com/isingh4/908779d32d9b4d10b33f20ab23f50a89?edit=files&file=index.html"> Sequential Color Scale </a> 
 										</p>
-										
-
+										<h3>ASSIGNMENT #7 
+										</header>
+										<p><a href="https://vizhub.com/isingh4/9af178e1c52d4f36ad4b7a02dbbe5217?edit=files&file=index.html"> force-directed layout </a> 
 									</section>
 
 							</div>
