--- a/index.html
+++ b/index.html
@@ -139,6 +139,9 @@
 										<h3>ASSIGNMENT #7 
 										</header>
 										<p><a href="https://vizhub.com/isingh4/9af178e1c52d4f36ad4b7a02dbbe5217?edit=files&file=index.html"> force-directed layout </a> 
+										<h3>ASSIGNMENT #8
+										</header>
+										<p><a href="https://vizhub.com/isingh4/fc53cfd5768c4ffda3a954d7884e5a84?edit=files&file=index.html"> Assignment 8: Interaction in D3  </a> 
 									</section>
 
 							</div>
