--- a/project.html
+++ b/project.html
@@ -58,6 +58,14 @@
 
 										
 									</section>
+									<article class="box post">
+											<header>
+												<h2> ALPHA RELEASE</h2>
+												</header>
+											<embed src="file.pdf" type="application/pdf" width="100%" height="400px" />
+								
+											</ul>
+										</article>
 
 							</div>
 							<div class="col-4 col-6-medium col-12-small">
