--- a/index.html
+++ b/index.html
@@ -142,6 +142,10 @@
 										<h3>ASSIGNMENT #8
 										</header>
 										<p><a href="https://vizhub.com/isingh4/fc53cfd5768c4ffda3a954d7884e5a84?edit=files&file=index.html"> Assignment 8: Interaction in D3  </a> 
+
+											<h3>ASSIGNMENT #9
+										</header>
+										<p><a href="https://vizhub.com/isingh4/71269da5280f4941976598c51cfecbc9?edit=files&file=index.html">  Assignment 9 - GeoVisualization in D3 </a> 
 									</section>
 
 							</div>
