--- a/project.html
+++ b/project.html
@@ -70,12 +70,27 @@
 							</div>
 							<div class="col-4 col-6-medium col-12-small">
 
-								<!-- Feature -->
-								
-							</div>
-							<div class="col-4 col-6-medium col-12-small">
+									<section>
+										<<a href="#" class="image featured"><img src="images/boxplot.png" alt="" /></a>
+										<header>
+											<h3>BOX PLOT 
+										</header>
+										<p><a href="https://vizhub.com/isingh4/dcc0376d2bf149ff914185d399dfb0e5"> CLICK HERE TO VIEW THE CODE FOR THE BOX PLOT</a> 
+										</p>
 
-								<!-- Feature -->
+									</section>
+									<div class="col-4 col-6-medium col-12-small">
+
+									<section>
+										<<a href="#" class="image featured"><img src="images/barchart.png" alt="" /></a>
+										<header>
+											<h3>BAR CHART
+										</header>
+										<p><a href="https://vizhub.com/isingh4/a50d32c4ffe144ac9887b171d31eb8ad"> CLICK HERE TO VIEW THE BAR CHART </a> 
+
+									</section>
+
+
 									
 
 
