--- a/index.html
+++ b/index.html
@@ -148,6 +148,12 @@
 										<p><a href="https://vizhub.com/isingh4/71269da5280f4941976598c51cfecbc9?edit=files&file=index.html">  Assignment 9 - GeoVisualization in D3 </a> 
 									</section>
 
+									<h3>ASSIGNMENT #10
+										</header>
+										<embed src=" a10.pdf " type="application/pdf" width="100%" height="400px" />
+									</section>
+
+
 							</div>
 							<div class="col-12">
 								<ul class="actions">
